--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=example
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=1234
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
